修改背景地址

--- a/plan/html/plane.html
+++ b/plan/html/plane.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/plane.css">
+    <link rel="stylesheet" href="../css/plane.css">
 </head>
 <body>
     <div id="superbox" class="superbox">
@@ -23,6 +23,6 @@
             <button onclick="restart()">重新开始</button>
         </div>
      </div>
-    <script src="/js/plane.js"></script>
+    <script src="../js/plane.js"></script>
 </body>
 </html>
