修改轮播图

--- a/JavaScript/SowingMap/sowing.html
+++ b/JavaScript/SowingMap/sowing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/threelife.css">
+    <link rel="stylesheet" href="./css/threelife.css">
 </head>
 <body>
    <div class="bigbox">
@@ -66,6 +66,6 @@
         <div id="box5-3" class="box5-3"></div>
         <div id="box5-4" class="box5-4"></div>
     </div>
-   <script src="js/threelife.js"></script>
+   <script src="./js/threelife.js"></script>
 </body>
 </html>
